[package]
name = "rust_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.6"
axum-server = "0.7.1"
tokio = { version = "1.40.0", features = ["full","rt-multi-thread"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[dev-dependencies]
anyhow = "1.0.89"
httpc-test = "0.1.10"
